# PHUMA

./: .gitignore  README.md  README_CN.md  UV_MIGRATION_SUMMARY.md  UV_QUICK_REF.md  UV_SETUP_COMPLETE.md  UV_SETUP_GUIDE.md  generate_validation_report.py  pyproject.toml  requirements.txt  setup_uv.sh  test_phuma_code.py  verify_uv_setup.sh
asset/humanoid_model/: README.md  README_CN.md
asset/humanoid_model/g1/: betas.npy
asset/humanoid_model/x1/: custom.xml  scene.xml
data/human_pose_preprocessed/example/: kick_chunk_0000.npy  kick_chunk_0001.npy
data/humanoid_pose/g1/example/: kick_chunk_0000.npy
docs/: index.html  style.css
src/curation/: preprocess_smplx_folder.py
src/phuma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: smpl.py  visualize.py
